--- a/index.html
+++ b/index.html
@@ -155,8 +155,12 @@
                 implementation: "If I open blinds, then I go shower"
             },
             {
+                task: "Brush teeth",
+                implementation: "If I finish shower, then I brush teeth"
+            },
+            {
                 task: "Visualization and affirmations",
-                implementation: "If I finish shower, then I do visualization and affirmations"
+                implementation: "If I brush teeth, then I do visualization and affirmations"
             },
             {
                 task: "Make bed",
@@ -207,8 +211,12 @@
                 implementation: "If my break is done, then I choose muay thai or work block 1"
             },
             {
+                task: "Starting Ritual",
+                implementation: "Do the full starting ritual: Close tabs, phone silent, message girlfriend, set timer, tell yourself '2 minutes', start"
+            },
+            {
                 task: "Work Block 1: 30 min work",
-                implementation: "If I choose work block 1, then I do my starting ritual"
+                implementation: "If I complete starting ritual, then I work for 30 min"
             },
             {
                 task: "10 min break",
@@ -227,8 +235,12 @@
                 implementation: "If lunch is done, then I have 1 hour free time"
             },
             {
+                task: "Starting Ritual",
+                implementation: "Do the full starting ritual: Close tabs, phone silent, message girlfriend, set timer, tell yourself '2 minutes', start"
+            },
+            {
                 task: "Work Block 2: 30 min work",
-                implementation: "If free time ends, then I do my starting ritual for work block 2"
+                implementation: "If I complete starting ritual, then I work for 30 min"
             },
             {
                 task: "10 min break",
